gitops/apps/windows/templates/guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - name: http
      port: 8080
      targetPort: 8080
