gitops/apps/windows/templates/service-rdp.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows-rdp
spec:
  selector:
    kubevirt.io/domain: windows-server-2022
  ports:
    - name: rdp
      port: 3389
      targetPort: 3389
